[tool.poetry]
name = "spkatt-gepade"
version = "0.1.0"
description = ""
authors = ["Anton Ehrmanntraut <anton.ehrmanntraut@uni-wuerzburg.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "spkatt_gepade"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.5,<2.0"
tqdm = "^4.66.1"
networkx = ">=3.1"
more-itertools = ">=9.1"
transformers = {version = ">=4.30", extras = ["torch"]}
torch = "<2"
peft = "^0.4.0"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pymc = ">=5.6,<6.0"
arviz = ">=0.15,<1.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
